update user Profile logic